# scanserver

./: .gitignore  README.md  RELEASE.md  ScanServer.spec  config.json  main.py  pyproject.toml  state.json
.github/workflows/: release.yml
api/: client.py  users_cache.py
core/: app_meta.py  config.py  logging_setup.py  state_store.py  time_utils.py  updater.py
modes/: base.py  compare.py  compare_fill.py  defect.py  package.py  transfer.py  transfer_defect.py
scanner/: com_reader.py  manager.py  router.py  session.py  svc_commands.py
scripts/: build_release.ps1
tts/: engines.py  manager.py
ui/: defect_window.py  transfer_window.py
